# log.c

./: CMakeLists.txt
src/: log.c  log.h
